Try fix image flicker blog home

--- a/dev/client/src/style.css
+++ b/dev/client/src/style.css
@@ -1238,7 +1238,6 @@ main {
   justify-content: space-between;
   box-shadow: 0rem 0rem 2rem 0rem rgba(0, 0, 0, 0.10);
   border-radius: 0.5rem;
-  background-color: var(--light);
 }
 #blogs-featured .featured-blog .content {
   padding: 2rem;
@@ -1251,6 +1250,7 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   gap: 3.5rem;
+  background-color: var(--light);
 }
 #blogs-featured .featured-blog .blog-title.featured {
   font-family: Poppins, sans-serif;
@@ -1316,17 +1316,18 @@ main {
 }
 #blogs-featured .featured-blog .cover-img {
   width: 45%;
-  overflow: hidden;
   border-radius: 0rem 0.5rem 0.5rem 0rem;
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 #blogs-featured .featured-blog .cover-img img {
   width: auto;
   height: 100%;
   z-index: 2;
-  position: relative;
+  object-fit: cover;
   /* Safari scroll flicker fix */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -2602,12 +2603,11 @@ main {
   }
   #blogs-featured .featured-blog .cover-img {
     width: 100%;
-    border-radius: 0.5rem;
+    border-radius: .5rem .5rem 0rem 0rem;
   }
   #blogs-featured .featured-blog .cover-img img {
     width: 100%;
     height: 20rem;
-    object-fit: cover;
   }
 
   #blogs-recipes-popular .section-container {
